# gnu_alive

./: .cvsignore  AUTHORS  CREDITS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  RELATED  TODO  aclocal.m4  alive.lsm.in  alive.spec.in  autogen.sh  configure  configure.ac  configure.in  qadsl.lsm.in  qadsl.spec.in
debian/: README.Debian  changelog  config  config.dia  config.eps  config.tex  control  copyright  dirs  docs  files  init.d  postinst  qadsl.postinst.debhelper  qadsl.postrm.debhelper  qadsl.prerm.debhelper  rules  templates
doc/: Makefile.am  alive.texi
etc/: Makefile.am  Makefile.in  alive.conf  qadsl.conf
include/: conf.h  config.h  daemon.h  http.h  lock.h  log.h  process.h  settings.h.in
intl/: Makefile.in
lib/: Makefile.am  Makefile.in  getopt.c  getopt1.c  strcasecmp.c
lib/conf/: Makefile.am  Makefile.in  README  conf.c  parser.y  tokens.l
m4/: ChangeLog  Makefile.in
man/: Makefile.am  Makefile.in  alive.8  alive.conf.5  alive.texinfo  gpl.texinfo  qadsl.8  qadsl.conf.5  qadsl.texinfo
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  alive.pot  sv.po
src/: Makefile.am  Makefile.in  body.scm  config.c  daemon.c  http.c  lock.c  log.c  main.c  process.c  test.c
