## Process this file with automake to produce Makefile.in

# Dive in and do what these dirs tell you.
SUBDIRS    = lib src man etc

# Stuff that would otherwise not be distributed.
# .lsm:  Linux Software Map - http://lsm.execpc.com/lsm/
# .spec: RedHat Package Manager template
# debian/ Debian maintainer scripts for building .deb, .dsc etc.
EXTRA_DIST = qadsl.lsm.in qadsl.spec.in \
             CREDITS \
             HACKING \
             RELATED \
             debian/README.Debian \
             debian/changelog     \
             debian/control       \
             debian/copyright     \
             debian/dirs          \
             debian/docs          \
             debian/init.d        \
             debian/rules
