# Makefile.am
#
# Copyright (C) 2012 Thien-Thi Nguyen
#
# This file is part of GNU Alive.
#
# GNU Alive is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Alive is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Alive.  If not, see <http://www.gnu.org/licenses/>.

info_TEXINFOS = alive.texi
alive_TEXINFOS = fdl.texi

# Makefile.am ends here
